src/test/ui/no_send-struct.stderr
error[E0277]: `Foo` cannot be sent between threads safely
  --> $DIR/no_send-struct.rs:15:5
   |
LL |     bar(x);
   |     ^^^ `Foo` cannot be sent between threads safely
   |
   = help: the trait `std::marker::Send` is not implemented for `Foo`
note: required by `bar`
  --> $DIR/no_send-struct.rs:11:1
   |
LL | fn bar<T: Send>(_: T) {}
   | ^^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
